# underspec-analysis

./: .gitignore  README.md  pyproject.toml  run.py
analysis/: elicitation.py  iter_refine.py  judge.py  load_data.py  optimize.py  prompt_gen.py  textgrad_optimizer.py  utils.py
analysis/optimizers/: copro.py  openai.py  reqaware.py  textgrad.py
data/: commitpack_357.csv  esci.csv  travel_conversations.csv
data/configs/: commitpack_fix.yaml  commitpack_main.yaml  commitpack_optimizer_gen.yaml  commitpack_prioritize.yaml  product_fix.yaml  product_main.yaml  product_optimizer_gen.yaml  product_prioritize.yaml  trip_fix.yaml  trip_main.yaml  trip_optimizer_gen.yaml  trip_prioritize.yaml
data/prompts/: commitpack_n1.json  commitpack_n10.json  commitpack_n19.json  commitpack_n19_optimized.json  commitpack_n5.json  product_n1.json  product_n10.json  product_n19.json  product_n19_optimized.json  product_n5.json  trip_n1.json  trip_n10.json  trip_n19.json  trip_n19_optimized.json  trip_n5.json
data/requirements/: commitpack.json  product.json  trip.json
