[project]
name = "underspec-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Chenyang Yang",email = "773386@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "litellm (>=1.61.20,<2.0.0)",
    "dspy (>=2.6.8,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "mlflow (>=2.20.3,<3.0.0)",
    "boto3 (>=1.37.33,<2.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "vl-convert-python (>=1.7.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
